--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>RAWRRRR!</title>
+		<title>RUN!</title>
 		<link rel="stylesheet" href="style.css"> 
 	</head>
 	<body>
@@ -10,7 +10,7 @@
 
 			Making the canvas white will make our work space really obvious.
 		-->
-		<h1>Dinosaur Game!</h1>
+		<h1>Cops & Robbers!</h1>
 		<canvas id="game" height="200" width="800"></canvas>
 		<p class="controls">press space bar to start</p>
 
